Fix the css on small displays

--- a/src/pages/Documentation/Documentation.sass
+++ b/src/pages/Documentation/Documentation.sass
@@ -4,4 +4,8 @@
     flex-grow: 1
     padding: 0 30px 30px
     min-width: 0
-    overflow: scroll
+    overflow: hidden
+    overflow-y: scroll
+
+    @media (max-width: 480px)
+        padding: 0 20px 30px
